# qntorch

./: LICENSE  README.md  main.py  optim.py  pyproject.toml  tracker.py  utils.py
src/qntorch/: __init__.py
src/qntorch/algorithm/: __init__.py  algorithm.py  cubreg_newton.py  optim.py  quasi_newton.py
src/qntorch/tracker/: __init__.py  tracker.py
src/qntorch/utils/: utils.py
tests/: cubic_newton.py  quasinewton.py  utils.py
