[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qntorch"
version = "0.0.1"
authors = [
  { name="Lucas Maes", email="lucas.maes@mila.quebec" },
]
description = "Quasi-Newton implementation in pytorch"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lucas-maes/qntorch"
Issues = "https://github.com/lucas-maes/qntorch/issues"
